--- a/app/src/app/modules/songs/songs.page.html
+++ b/app/src/app/modules/songs/songs.page.html
@@ -31,7 +31,7 @@
             <ion-label>{{item.author}}</ion-label>
           </ion-label>
           <ion-buttons slot="end">
-            <div class="note">{{ settings.notesObject[item.tone-1].name}}</div>
+            <div class="note">{{ item.tone.name + item.tone.extension}}</div>
           </ion-buttons>
         </ion-item>
 
