--- a/app/src/app/modules/home/home.page.html
+++ b/app/src/app/modules/home/home.page.html
@@ -45,7 +45,7 @@
   
   </div>
   <ion-fab class="ion-fab-custom" slot="fixed" vertical="bottom" horizontal="end">
-    <ion-fab-button color="primary" (click)="pageService.navigateRoute('service/new/')">
+    <ion-fab-button color="primary" (click)="pageService.navigateRoute('service/edit/new')">
       <ion-icon color="secondary" name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
