--- a/app/src/app/modules/home/home.page.html
+++ b/app/src/app/modules/home/home.page.html
@@ -5,17 +5,34 @@
 </ion-header>
 
 <ion-content>
+  
+  <div class="ion-padding-start ion-padding-end ion-margin-top">
+    <ion-row>
+      <ion-col size="9.5">
+        <ion-searchbar [(ngModel)]='textSearch' (ionChange)='getItems()' [debounce]="600" type="text" placeholder="Buscar"></ion-searchbar>
+      </ion-col>
+      <ion-col size="2">
+        <ion-button (click)="sortSongs()" class="ion-margin-end" fill="solid" color="dark" shape="round">
+          <ion-icon name="swap-vertical-outline"></ion-icon>
+        </ion-button>
+      </ion-col>
+    </ion-row>
+    <div class="d-flex ion-align-items-center">
+      <span>{{ this.sortAsc == 0 ? 'Más recientes' : this.sortAsc == 2 ? 'Menos recientes' : this.sortAsc == 1 ? 'A-Z' : 'Z-A'}}</span>
+    </div>
+  </div>
 
   <div class="margin-bottom-custom">
-    <div class="ion-padding-start ion-padding-end ion-margin-top">
+    <!-- <div class="ion-padding-start ion-padding-end ion-margin-top">
       <ion-row class="w100">
         <ion-item lines="none" class="w100 border-10">
           <ion-icon name="search" slot="start"></ion-icon>
-          <ion-input type="text" placeholder="Buscar"></ion-input>
+          <ion-input [(ngModel)]='textSearch'
+          (ionChange)='getItems()' type="text" placeholder="Buscar"></ion-input>
         </ion-item>
       </ion-row>
   
-    </div>
+    </div> -->
   
     <ion-text color="tertiary">
       <h5 class="ion-margin-start">Mis listas</h5>
