--- a/app/src/app/modules/songs/songs.page.html
+++ b/app/src/app/modules/songs/songs.page.html
@@ -9,7 +9,7 @@
   <div class="ion-padding-start ion-padding-end ion-margin-top">
     <ion-row>
       <ion-col size="9.5">
-        <ion-searchbar [(ngModel)]='textSearch' (ionChange)='getItems()' type="text" placeholder="Buscar"></ion-searchbar>
+        <ion-searchbar [(ngModel)]='textSearch' (ionChange)='getItems()' [debounce]="600" type="text" placeholder="Buscar"></ion-searchbar>
       </ion-col>
       <ion-col size="2">
         <ion-button (click)="sortSongs()" class="ion-margin-end" fill="solid" color="dark" shape="round">
@@ -18,7 +18,7 @@
       </ion-col>
     </ion-row>
     <div class="d-flex ion-align-items-center">
-      <span>{{ this.sortAsc == null ? 'Más nuevas' : this.sortAsc == 1 ? 'A-Z' : 'Z-A'}}</span>
+      <span>{{ this.sortAsc == 0 ? 'Más recientes' : this.sortAsc == 2 ? 'Menos recientes' : this.sortAsc == 1 ? 'A-Z' : 'Z-A'}}</span>
     </div>
   </div>
 
