--- a/app/src/app/modules/home/home.page.html
+++ b/app/src/app/modules/home/home.page.html
@@ -1,11 +1,16 @@
-<ion-header class="ion-no-border">
-  <ion-toolbar color="primary">
-    <ion-title color="light">Levi</ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content>
-  
+<ion-content class="ion-padding">
+
+  <div class="shadow-circle-global"></div>
+
+  <div class="title-logo">
+    <span class="title">
+      Leví
+    </span>
+
+    <span class="subtitle">Hola, {{ global.user.fullName }}</span>
+    <span>Bienvenido de nuevo!</span>
+  </div>  
   <div class="ion-padding-start ion-padding-end ion-margin-top">
     <ion-row>
       <ion-col size="9.5">
@@ -17,12 +22,12 @@
         </ion-button>
       </ion-col>
     </ion-row>
-    <div class="d-flex ion-align-items-center">
+    <!-- <div class="d-flex ion-align-items-center">
       <span>{{ this.sortAsc == 0 ? 'Más recientes' : this.sortAsc == 2 ? 'Menos recientes' : this.sortAsc == 1 ? 'A-Z' : 'Z-A'}}</span>
-    </div>
+    </div> -->
   </div>
 
-  <div class="margin-bottom-custom">
+  <ion-grid class="margin-bottom-custom">
     <!-- <div class="ion-padding-start ion-padding-end ion-margin-top">
       <ion-row class="w100">
         <ion-item lines="none" class="w100 border-10">
@@ -34,36 +39,43 @@
   
     </div> -->
   
-    <ion-text color="tertiary">
-      <h5 class="ion-margin-start">Mis listas</h5>
+    <ion-text color="light">
+      <h3 class="ion-margin-start">Listas recientes</h3>
     </ion-text>
   
-    <ion-card *ngFor="let item of items">
-      <ion-item-sliding>
-        <ion-item (click)="pageService.navigateRoute('service/watch/' + item.id)" lines="none" class="ion-align-items-center">
+    <!-- <ion-card class="card-control" > -->
+      <!-- <ion-item-sliding > -->
+        <ion-item *ngFor="let item of items" (click)="pageService.navigateRoute('service/watch/' + item.id)" class="ion-align-items-center item-control">
           <ion-label class="ion-text-wrap">
-            <p>{{ item?.name }} - {{ item.dateTo | date:'dd/MM/yyyy'}}</p>
-            <ion-label><p>Creada por: <b>{{ item?.user?.fullName }}</b></p></ion-label>
+            <p>{{ item?.name }}</p>
+            <!-- <ion-label><p>Creada por: <b>{{ item?.user?.fullName }}</b></p></ion-label> -->
+             <ion-label class="font-light">{{ item.dateTo | date:'dd/MM/yyyy'}}</ion-label>
+          </ion-label>
+
+          <ion-label class="ion-text-end" slot="end">10
+            <ion-label class="font-light">Canciones</ion-label>
           </ion-label>
         </ion-item>
     
-        <ion-item-options>
+        <!-- <ion-item-options>
           <ion-item-option (click)="pageService.navigateRoute('service/edit/' + item.id)" color="secondary">
             <ion-icon slot="start" name="create-outline"></ion-icon>
             Editar</ion-item-option>
-        </ion-item-options>
-      </ion-item-sliding>
+        </ion-item-options> -->
+      <!-- </ion-item-sliding> -->
      
-    </ion-card>
+    <!-- </ion-card> -->
 
     <div *ngIf="items.length == 0" class="ion-padding ion-text-center">
-      <h4>No hay listas para mostrar</h4>
+      <ion-text color="light">
+        <h4>No hay listas para mostrar</h4>
+      </ion-text>
     </div>
   
-  </div>
+  </ion-grid>
   <ion-fab class="ion-fab-custom" slot="fixed" vertical="bottom" horizontal="end">
     <ion-fab-button color="primary" (click)="pageService.navigateRoute('service/edit/new')">
-      <ion-icon color="secondary" name="add"></ion-icon>
+      <ion-icon color="light" name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 
