--- a/app/src/app/modules/home/home.page.scss
+++ b/app/src/app/modules/home/home.page.scss
@@ -1,7 +1,44 @@
-.ion-fab-custom{
-    margin-bottom: 36px;
-}
+ion-content{
+    .ion-fab-custom{
+        margin-bottom: 36px;
+    }
+    
+    .margin-bottom-custom{
+        margin-bottom: 64px;
+    }
+    
+    .title-logo{
+        padding: 0px 16px;
+        display: flex;
+        flex-direction: column;
+        color: var(--ion-color-light);
+        
+        .title{
+            text-align: center;
+            font-size: 2.2rem;
+            font-weight: 900;
+            margin-top: 16px;
+        }
+    
+        .subtitle{
+            margin-top: 16px;
+            font-size: 1.8rem;
+            font-weight: 900;
+        }
+    
+    }
+    
+    .item-control{
+        --background: transparent !important;
+        border-bottom: 1px solid white;
+        ion-label, p{
+            color: white !important;
+            font-size: 1.1rem;
 
-.margin-bottom-custom{
-    margin-bottom: 64px;
+            .font-light{
+                font-size: .9rem;
+                font-weight: 200 !important;
+            }
+        }
+    }
 }
