--- a/app/src/app/modules/login/login.page.scss
+++ b/app/src/app/modules/login/login.page.scss
@@ -11,12 +11,12 @@ ion-content {
 
     .recover {
         font-size: 0.9rem;
-        color: var(--ion-color-primary);
+        color: var(--ion-color-light);
     }
 
     .versionText {
         p {
-            color: var(--ion-color-primary) !important;
+            color: var(--ion-color-light) !important;
         }
     
         font-size: 0.9rem;
@@ -28,7 +28,7 @@ ion-content {
     }
 
     ion-label {
-        color: var(--ion-color-tertiary) !important;
+        // color: var(--ion-color-tertiary) !important;
         font-weight: 400 !important;
         font-size: 0.9rem !important;
     }
@@ -36,13 +36,36 @@ ion-content {
 }
 
 .title-logo{
-    font-size: 4rem;
-    font-weight: 900;
+    
     display: flex;
     flex-direction: column;
     text-align: center;
+    color: var(--ion-color-light);
+
+    .title{
+        filter: drop-shadow(4px 4px #43B27F);
+        font-size: 4rem;
+        font-weight: 900;
+    }
 
     span{
         font-size: 1rem;
     }
+}
+
+.shadow-circle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    height: 400px;
+    border-radius: 100%;
+    background-color: var(--ion-color-primary);
+    opacity: 0.4;
+    filter: blur(120px);
+}
+
+.row-control{
+    position: relative;
 }
