--- a/app/src/app/modules/modal-instrument/modal-instrument.component.html
+++ b/app/src/app/modules/modal-instrument/modal-instrument.component.html
@@ -1,10 +1,10 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>{{ !editing ? 'Agregar' : 'Editar'}}</ion-title>
+<ion-header class="ion-no-border">
+  <ion-toolbar color="secondary">
+    <ion-title color="light">{{ !editing ? 'Agregar' : 'Editar'}}</ion-title>
 
     <ion-buttons slot="end">
       <ion-button (click)="closeModal()">
-        <ion-icon name="close"></ion-icon>
+        <ion-icon color="light" name="close"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -12,8 +12,8 @@
 <ion-content>
   <ion-grid class="ion-padding">
     <ion-row>
+      <ion-label color="light">Nombre</ion-label>
       <ion-item class="ion-align-items-center w100 fix-floating border-10" lines="none">
-        <ion-label color="tertiary" position="floating">Nombre</ion-label>
         <ion-input type="text" [(ngModel)]="annotationName"></ion-input>
       </ion-item>
       <!-- <div *ngIf="!isFieldValid('password')" class="invalid-input-message">
@@ -21,11 +21,13 @@
       </div> -->
 
       <ion-buttons (click)="acceptLabel()" class="w100 ion-text-center ion-margin-top">
+        <ion-button (click)="closeModal(editing)" class="w100" color="dark" expand="block">
+          <ion-text color="light">
+            {{!editing ? 'Cancelar' : 'Eliminar'}}
+          </ion-text>
+        </ion-button>
         <ion-button class="w100" expand="block" fill="solid" shape="round" color="dark">
           Guardar
-        </ion-button>
-        <ion-button (click)="closeModal(editing)" class="w100" expand="block">
-          {{!editing ? 'Cancelar' : 'Eliminar'}}
         </ion-button>
       </ion-buttons>
     </ion-row>
