--- a/app/src/app/modules/song/song.page.html
+++ b/app/src/app/modules/song/song.page.html
@@ -1,24 +1,24 @@
-<ion-header class="ion-no-border">
-  <ion-toolbar color="primary">
-    <ion-buttons slot="start">
-      <ion-back-button color="light" icon="arrow-back-circle" defaultHref="/home"></ion-back-button>
-    </ion-buttons>
-    <ion-title color="light">{{form?.value.name}} {{ form?.value.author ? '- '+ form?.value.author : ''}}</ion-title>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content>
+  <ion-header class="ion-no-border">
+    <ion-toolbar color="transparent">
+      <ion-buttons slot="start">
+        <ion-back-button color="light" defaultHref="/home"></ion-back-button>
+      </ion-buttons>
+      <ion-title color="light">{{form?.value.name}} {{ form?.value.author ? '- '+ form?.value.author : ''}}</ion-title>
+    </ion-toolbar>
+  </ion-header>
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <ion-segment [(ngModel)]="segmentValue" [ngModelOptions]="{standalone: true}" value="song"
       class="w100 segment-custom">
       <ion-segment-button [value]="segmentGeneral" value="general">
-        <ion-label>General</ion-label>
+        <ion-label [color]="segmentValue == segmentGeneral ? 'primary' : 'light'">General</ion-label>
       </ion-segment-button>
       <ion-segment-button [value]="segmentSong" value="song">
-        <ion-label>Letra</ion-label>
+        <ion-label [color]="segmentValue == segmentSong ? 'primary' : 'light'">Letra</ion-label>
       </ion-segment-button>
       <ion-segment-button [value]="segmentNotes" value="notes">
-        <ion-label>Notas</ion-label>
+        <ion-label [color]="segmentValue == segmentNotes ? 'primary' : 'light'">Notas</ion-label>
       </ion-segment-button>
     </ion-segment>
 
@@ -26,24 +26,27 @@
       <div *ngSwitchCase="segmentGeneral">
         <ion-grid class="ion-padding">
           <ion-row>
+            <ion-label color="light">Nombre</ion-label>
             <ion-item class="ion-align-items-center w100 fix-floating" lines="none">
-              <ion-label color="tertiary" position="floating">Nombre</ion-label>
               <ion-input type="text" formControlName="name"></ion-input>
             </ion-item>
             <div *ngIf="!isFieldValid('name')" class="invalid-input-message">
               {{getFieldError('name')}}
             </div>
 
-            <ion-item class="ion-align-items-center w100 ion-margin-top fix-floating" lines="none">
-              <ion-label color="tertiary" position="floating">Autor</ion-label>
-              <ion-input type="text" formControlName="author"></ion-input>
-            </ion-item>
-            <div *ngIf="!isFieldValid('author')" class="invalid-input-message">
-              {{getFieldError('author')}}
+            <div class="ion-margin-top w100">
+              <ion-label color="light">Autor</ion-label>
+              <ion-item class="ion-align-items-center w100 fix-floating" lines="none">
+                <ion-input type="text" formControlName="author"></ion-input>
+              </ion-item>
+              <div *ngIf="!isFieldValid('author')" class="invalid-input-message">
+                {{getFieldError('author')}}
+              </div>
             </div>
 
-            <ion-item class="ion-align-items-center w100 ion-margin-top" lines="none">
-              <ion-label position="floating">Tono</ion-label>
+           <div class="ion-margin-top w100">
+             <ion-label color="light">Tono</ion-label>
+            <ion-item class="ion-align-items-center w100" lines="none">
               <ion-select formControlName="tone" interface="popover" value="tone" placeholder="Seleccione el tono" [compareWith]="compareWithFn">
                 <ion-select-option *ngFor="let note of settings.notesWithMinors"
                   [value]="note">{{note.name}}<span *ngIf="note.extension" class="minor-note">{{note.extension}}</span></ion-select-option>
@@ -52,32 +55,39 @@
             <div *ngIf="!isFieldValid('tone')" class="invalid-input-message">
               {{getFieldError('tone')}}
             </div>
+           </div>
 
-            <ion-item class="ion-align-items-center w100 ion-margin-top" lines="none">
-              <ion-label color="tertiary" position="floating">Tag</ion-label>
-              <ion-input type="text" formControlName="tag"></ion-input>
-            </ion-item>
-            <div *ngIf="!isFieldValid('tag')" class="invalid-input-message">
-              {{getFieldError('tag')}}
-            </div>
+           <div class="ion-margin-top w100">
+             <ion-label color="light">Tag</ion-label>
+             <ion-item class="ion-align-items-center w100" lines="none">
+               <ion-input type="text" formControlName="tag"></ion-input>
+             </ion-item>
+             <div *ngIf="!isFieldValid('tag')" class="invalid-input-message">
+               {{getFieldError('tag')}}
+             </div>
+           </div>
 
             <ion-row class="w100 ion-margin-top ion-no-padding" *ngFor="let s of form.value?.singers; index as i">
               <ion-col size="7" class="ion-no-padding ion-padding-end">
-                <ion-item class="ion-align-items-center w100 fix-floating" lines="none">
-                  <ion-label color="tertiary" position="floating">Cantante</ion-label>
-                  <ion-input [(ngModel)]="form.value?.singers[i].singer" [ngModelOptions]="{standalone: true}"
-                    type="text"></ion-input>
-                </ion-item>
+                <div class="ion-margin-top w100">
+                  <ion-label color="light">Cantante</ion-label>
+                  <ion-item class="ion-align-items-center w100 fix-floating" lines="none">
+                    <ion-input [(ngModel)]="form.value?.singers[i].singer" [ngModelOptions]="{standalone: true}"
+                      type="text"></ion-input>
+                  </ion-item>
+                </div>
               </ion-col>
               <ion-col [size]="!isWatching ? 3 : 5" class="ion-no-padding ion-padding-end">
-                <ion-item class="ion-align-items-center w100" lines="none">
-                  <ion-label position="floating">Tono</ion-label>
-                  <ion-select [(ngModel)]="form.value?.singers[i].note" [ngModelOptions]="{standalone: true}"
-                    interface="popover" value="tone" placeholder="Seleccione el tono" [compareWith]="compareWithFn">
-                    <ion-select-option *ngFor="let note of settings.notesWithMinors"
-                      [value]="note">{{note.name}}<span *ngIf="note.extension" class="minor-note">{{note.extension}}</span></ion-select-option>
-                  </ion-select>
-                </ion-item>
+                <div class="ion-margin-top">
+                  <ion-label color="light">Tono</ion-label>
+                  <ion-item class="ion-align-items-center w100" lines="none">
+                    <ion-select [(ngModel)]="form.value?.singers[i].note" [ngModelOptions]="{standalone: true}"
+                      interface="popover" value="tone" placeholder="Seleccione el tono" [compareWith]="compareWithFn">
+                      <ion-select-option *ngFor="let note of settings.notesWithMinors"
+                        [value]="note">{{note.name}}<span *ngIf="note.extension" class="minor-note">{{note.extension}}</span></ion-select-option>
+                    </ion-select>
+                  </ion-item>
+                </div>
               </ion-col>
               <ion-col size="2" *ngIf="!isWatching" class="ion-no-padding ion-no-margin">
                 <ion-button (click)="addOrRemoveSinger(i, i+1!=form.value?.singers.length)" class="height-custom-btn">
@@ -116,7 +126,7 @@
         <div class="quill-editor-container">
           <quill-editor class="quill-editor" format="text" placeholder="Escribe o pega la canción aquí"
             [(ngModel)]="form?.value.lyrics" [ngModelOptions]="{standalone: true}"
-            [modules]="!isWatching ? config : {toolbar: false} " theme="snow"></quill-editor>
+            [modules]="!isWatching ? config : {toolbar: false}" theme="snow"></quill-editor>
         </div>
       </div>
 
@@ -124,13 +134,14 @@
 
         <swiper [config]="swiperConfig" class="ion-padding-start ion-padding-end ion-align-items-center d-flex">
           <ng-template swiperSlide *ngFor="let annotation of form.value?.annotations; index as i">
-              <ion-chip (click)="selectAnnotation(i)" (press)="openModalInstrument(i)"
+              <ion-chip color="primary" (click)="selectAnnotation(i)" (press)="openModalInstrument(i)"
             [class]="annotation.selected ? 'active':''">{{annotation.name}}</ion-chip>
-            
+
+          </ng-template>
+          <ng-template swiperSlide >
             <ion-button type="button" (click)="openModalInstrument()" slot="end" class="note placeholder-note" shape="round">
               <ion-icon name="add"></ion-icon>
             </ion-button>
-
           </ng-template>
           
           <!-- <ng-template swiperSlide>
@@ -142,8 +153,9 @@
           </ng-template> -->
         </swiper>
 
-        <div>
-          <ion-select (ionChange)="transposeAnnotations()" [(ngModel)]="transposeTone" [ngModelOptions]="{standalone: true}" interface="popover" value="tone" placeholder="Seleccione el tono" [compareWith]="compareWithFn">
+        <div class="ion-margin-start ion-margin-top ion-margin-end">
+          <ion-label color="light">Seleccione el tono</ion-label>
+          <ion-select (ionChange)="transposeAnnotations()" [(ngModel)]="transposeTone" [ngModelOptions]="{standalone: true}" interface="popover" value="tone" [compareWith]="compareWithFn">
             <ion-select-option *ngFor="let note of notesWithMinorIfDeclared" 
               [value]="note">{{note.name}}<span *ngIf="note.extension" class="minor-note">{{note.extension}}</span></ion-select-option>
           </ion-select>
@@ -156,7 +168,7 @@
             <ion-item fill="outline">
               <ion-input [(ngModel)]="segment.label" [ngModelOptions]="{standalone: true}" type="text"
                 placeholder="Parte"></ion-input>
-              <ion-button (click)="deleteSegment(i)" class="note ion-text-capitalize" slot="end" style="background-color: #c11515" shape="round">
+              <ion-button (click)="deleteSegment(i)" class="note ion-text-capitalize" slot="end" shape="round">
                 <ion-icon name="trash"></ion-icon>
               </ion-button>
             </ion-item>
@@ -187,8 +199,8 @@
     </div>
 
     <!-- <ion-footer *ngIf="!isWatching" class="footer-custom"> -->
-    <ion-footer  class="footer-custom">
-      <ion-toolbar>
+    <ion-footer class="footer-custom">
+      <ion-toolbar color="transparent" class="ion-padding-bottom">
         <!-- <div *ngIf="segmentValue == segmentNotes && segmentValue != segmentGeneral">
 
           <div class="notes " *ngFor="let row of settings.matrizNotes">
@@ -200,10 +212,12 @@
           </div>
         </div> -->
 
-        <ion-button type="submit" class="ion-padding-start ion-padding-end" color="secondary" expand="block"
+        <ion-button type="submit" class="ion-padding-start ion-padding-end" color="primary" expand="block"
           fill="solid" shape="round">
-          Guardar
-          <ion-icon slot="start" name="save"></ion-icon>
+          <ion-text color="light">
+            Guardar
+          </ion-text>
+          <ion-icon slot="start" color="light" name="save"></ion-icon>
         </ion-button>
 
       </ion-toolbar>
