--- a/app/src/app/modules/songs/songs.page.html
+++ b/app/src/app/modules/songs/songs.page.html
@@ -1,11 +1,11 @@
-<ion-header class="ion-no-border">
-  <ion-toolbar color="primary">
-    <ion-title color="light">Canciones</ion-title>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content>
-
+  <ion-header class="ion-no-border">
+    <ion-toolbar color="invisible">
+      <ion-title class="ion-text-center ion-margin-top" color="light">Canciones</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <div class="shadow-circle-global"></div>
   <div class="ion-padding-start ion-padding-end ion-margin-top">
     <ion-row>
       <ion-col size="9.5">
@@ -17,9 +17,9 @@
         </ion-button>
       </ion-col>
     </ion-row>
-    <div class="d-flex ion-align-items-center">
+    <!-- <div class="d-flex ion-align-items-center">
       <span>{{ this.sortAsc == 0 ? 'Más recientes' : this.sortAsc == 2 ? 'Menos recientes' : this.sortAsc == 1 ? 'A-Z' : 'Z-A'}}</span>
-    </div>
+    </div> -->
   </div>
 
   <ion-list>
