--- a/app/src/app/modules/songs/songs.page.scss
+++ b/app/src/app/modules/songs/songs.page.scss
@@ -7,9 +7,9 @@ ion-content{
         height: 30px;
         width: 30px;
         border-radius: 100%;
-        background-color: rgb(44, 44, 44);
+        background-color: var(--ion-color-primary);
         place-content: center;
-        color: white;
+        color: var(--ion-color-secondary);
         font-weight: 900;
         font-size: 1.2rem;
         display: flex;
