--- a/app/src/app/modules/user/user.page.html
+++ b/app/src/app/modules/user/user.page.html
@@ -1,66 +1,75 @@
-<ion-header class="ion-no-border">
-  <ion-toolbar color="primary">
-    <ion-buttons slot="start" *ngIf="creating">
-      <ion-back-button color="light" icon="arrow-back-circle" defaultHref="/login"></ion-back-button>
-    </ion-buttons>
-    <ion-title color="light">{{creating ? 'Registro' : 'Perfil'}}</ion-title>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content id='content' class="ion-padding">
-  <form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <ion-text color="tertiary">
-      <h5>Datos de usuario</h5>
-    </ion-text>
+  <ion-header class="ion-no-border">
+    <ion-toolbar color="transparent">
+      <ion-buttons slot="start" *ngIf="creating">
+        <ion-back-button color="light" defaultHref="/login"></ion-back-button>
+      </ion-buttons>
+      <ion-title color="light">{{creating ? 'Registro' : 'Perfil'}}</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
-    <ion-item lines="none" class="ion-margin-top fix-floating">
-      <ion-label position="floating" color="tertiary">Nombre completo</ion-label>
+  <div class="shadow-circle-global"></div>
+
+  <form [formGroup]="form" (ngSubmit)="onSubmit()">
+
+    <ion-label color="light">Nombre completo</ion-label>
+    <ion-item lines="none">
       <ion-input type="text" formControlName="fullName"></ion-input>
     </ion-item>
     <div *ngIf="!isFieldValid('fullName')" class="invalid-input-message">
       {{getFieldError('fullName')}}
     </div>
-    <ion-item lines="none" class="ion-margin-top fix-floating">
-      <ion-label position="floating" color="tertiary">Email</ion-label>
-      <ion-input type="email" formControlName="emailAddress"></ion-input>
-    </ion-item>
-    <div *ngIf="!isFieldValid('emailAddress')" class="invalid-input-message">
-      {{getFieldError('emailAddress')}}
+
+    <div class="ion-margin-top">
+      <ion-label color="light">Email</ion-label>
+      <ion-item lines="none">
+        <ion-input type="email" formControlName="emailAddress"></ion-input>
+      </ion-item>
+      <div *ngIf="!isFieldValid('emailAddress')" class="invalid-input-message">
+        {{getFieldError('emailAddress')}}
+      </div>
     </div>
 
     <ng-container *ngIf="creating">
-      <ion-text color="tertiary">
+      <!-- <ion-text color="tertiary">
         <h5>Contraseña</h5>
-      </ion-text>
+      </ion-text> -->
 
-      <ion-item class="ion-align-items-center w100 ion-margin-top fix-floating" lines="none">
-        <ion-label color="tertiary" position="floating">Contraseña</ion-label>
-        <ion-icon color="tertiary" slot="end" [name]="showPassword ? 'eye-off' : 'eye'"
-          (click)="showPassword = !showPassword"></ion-icon>
-        <ion-input [type]="showPassword ? 'text' : 'password'" formControlName="password"></ion-input>
-      </ion-item>
-      <div *ngIf="!isFieldValid('password')" class="invalid-input-message">
-        {{getFieldError('password')}}
+      <div class="ion-margin-top">
+        <ion-label color="light">Contraseña</ion-label>
+        <ion-item class="ion-align-items-center w100" lines="none">
+          <ion-icon color="primary" slot="end" [name]="showPassword ? 'eye-off' : 'eye'"
+            (click)="showPassword = !showPassword"></ion-icon>
+          <ion-input [type]="showPassword ? 'text' : 'password'" formControlName="password"></ion-input>
+        </ion-item>
+        <div *ngIf="!isFieldValid('password')" class="invalid-input-message">
+          {{getFieldError('password')}}
+        </div>
       </div>
 
-      <ion-item class="ion-align-items-center w100 ion-margin-top fix-floating" lines="none">
-        <ion-label color="tertiary" position="floating">Repetir Contraseña</ion-label>
-        <ion-icon color="tertiary" slot="end" [name]="showPassword2 ? 'eye-off' : 'eye'"
+     <div class="ion-margin-top">
+      <ion-label color="light">Repita contraseña</ion-label>
+      <ion-item class="ion-align-items-center w100" lines="none">
+        <ion-icon color="primary" slot="end" [name]="showPassword2 ? 'eye-off' : 'eye'"
           (click)="showPassword2 = !showPassword2"></ion-icon>
         <ion-input [type]="showPassword2 ? 'text' : 'password'" formControlName="verifyPassword"></ion-input>
       </ion-item>
       <div *ngIf="!isFieldValid('verifyPassword')" class="invalid-input-message">
         {{getFieldError('verifyPassword')}}
       </div>
+     </div>
     </ng-container>
 
     <ion-button class="ion-margin-top global-btn ion-text-capitalize" fill="clear" color="primary" expand="block"
       type="button" (click)="goToChangePassword()" *ngIf="!creating">
       <u>Cambiar contraseña</u>
     </ion-button>
-    <ion-button class="ion-margin-top ion-margin-bottom ion-text-capitalize global-btn" color="secondary" expand="block"
+    <ion-button class="ion-margin-top ion-margin-bottom ion-text-capitalize global-btn" color="primary" expand="block"
       type="submit" [disabled]="!form.valid">
-      {{ creating ? 'Registrarse' : 'Guardar cambios' }}
+      <ion-text color="light">
+        {{ creating ? 'Registrarse' : 'Guardar cambios' }}
+      </ion-text>
     </ion-button>
     <ion-button class="ion-margin-top global-btn ion-text-capitalize" fill="outline" color="primary" expand="block"
       (click)="logout()" *ngIf="!creating">
