--- a/app/src/app/modules/login/login.page.html
+++ b/app/src/app/modules/login/login.page.html
@@ -7,7 +7,7 @@
           <span class="title">
             Leví
           </span>
-          <span class="ion-margin-top">Por favor ingrese su cuenta</span>
+          <span class="ion-margin-top">Una app para músicos</span>
         </h1>
       </ion-row>
 
@@ -25,7 +25,7 @@
         <ion-col size="12">
           <ion-label color="light">Contraseña</ion-label>
           <ion-item class="ion-align-items-center w100 fix-floating" lines="none">
-            <ion-icon color="tertiary" slot="end" [name]="showPassword ? 'eye-off' : 'eye'"
+            <ion-icon color="primary" slot="end" [name]="showPassword ? 'eye-off' : 'eye'"
               (click)="showPassword = !showPassword"></ion-icon>
             <ion-input color="dark" [type]="showPassword ? 'text' : 'password'" formControlName="password"></ion-input>
           </ion-item>
