--- a/app/src/app/modules/song/song.page.scss
+++ b/app/src/app/modules/song/song.page.scss
@@ -87,3 +87,7 @@ ion-select{
     background-color: var(--ion-color-light);
     border-radius: 10px;
 }
+
+.button-add-control{
+    height: 32px !important;
+}
