--- a/app/src/app/modules/login/login.page.scss
+++ b/app/src/app/modules/login/login.page.scss
@@ -43,7 +43,7 @@ ion-content {
     color: var(--ion-color-light);
 
     .title{
-        filter: drop-shadow(4px 4px #43B27F);
+        filter: drop-shadow(4px 4px #6030ff);
         font-size: 4rem;
         font-weight: 900;
     }
