--- a/app/src/app/modules/service/service.page.html
+++ b/app/src/app/modules/service/service.page.html
@@ -98,6 +98,6 @@
 
 <ion-fab *ngIf="creating || !isWatching" class="ion-fab-custom-2" slot="fixed" vertical="bottom" horizontal="end">
   <ion-fab-button color="primary" (click)="goToAdd()">
-    <ion-icon color="secondary" name="add"></ion-icon>
+    <ion-icon color="light" name="add"></ion-icon>
   </ion-fab-button>
 </ion-fab>
