--- a/app/src/app/modules/song/song.page.html
+++ b/app/src/app/modules/song/song.page.html
@@ -67,9 +67,9 @@
              </div>
            </div>
 
-            <ion-row class="w100 ion-margin-top ion-no-padding" *ngFor="let s of form.value?.singers; index as i">
+            <ion-row class="w100 ion-margin-top ion-no-padding ion-align-items-center" *ngFor="let s of form.value?.singers; index as i">
               <ion-col size="7" class="ion-no-padding ion-padding-end">
-                <div class="ion-margin-top w100">
+                <div class="w100">
                   <ion-label color="light">Cantante</ion-label>
                   <ion-item class="ion-align-items-center w100 fix-floating" lines="none">
                     <ion-input [(ngModel)]="form.value?.singers[i].singer" [ngModelOptions]="{standalone: true}"
@@ -78,7 +78,7 @@
                 </div>
               </ion-col>
               <ion-col [size]="!isWatching ? 3 : 5" class="ion-no-padding ion-padding-end">
-                <div class="ion-margin-top">
+                <div>
                   <ion-label color="light">Tono</ion-label>
                   <ion-item class="ion-align-items-center w100" lines="none">
                     <ion-select [(ngModel)]="form.value?.singers[i].note" [ngModelOptions]="{standalone: true}"
@@ -89,29 +89,29 @@
                   </ion-item>
                 </div>
               </ion-col>
-              <ion-col size="2" *ngIf="!isWatching" class="ion-no-padding ion-no-margin">
+              <ion-col size="2" *ngIf="!isWatching" class="ion-no-padding ion-margin-top ion-no-margin">
                 <ion-button (click)="addOrRemoveSinger(i, i+1!=form.value?.singers.length)" class="height-custom-btn">
                   <ion-icon [name]="i+1==form.value?.singers.length ? 'add': 'remove'" color="light"></ion-icon>
                 </ion-button>
               </ion-col>
             </ion-row>
 
-            <ion-row class="w100 ion-margin-top ion-no-padding" *ngFor="let s of form.value?.links; index as i">
+            <ion-row class="w100 ion-margin-top ion-no-padding ion-align-items-center" *ngFor="let s of form.value?.links; index as i">
               <ion-col size="7" class="ion-no-padding ion-padding-end">
+                <ion-label color="light" position="floating">Título</ion-label>
                 <ion-item class="ion-align-items-center w100" lines="none">
-                  <ion-label color="tertiary" position="floating">Titulo</ion-label>
                   <ion-input [(ngModel)]="form.value?.links[i].name" [ngModelOptions]="{standalone: true}"
                     type="text"></ion-input>
                 </ion-item>
               </ion-col>
               <ion-col [size]="!isWatching ? 3 : 5" class="ion-no-padding ion-padding-end">
+                <ion-label color="light" position="floating">Link</ion-label>
                 <ion-item class="ion-align-items-center w100" lines="none">
-                  <ion-label color="tertiary" position="floating">Link</ion-label>
                   <ion-input [(ngModel)]="form.value?.links[i].link" [ngModelOptions]="{standalone: true}"
                     type="text"></ion-input>
                 </ion-item>
               </ion-col>
-              <ion-col size="2" *ngIf="!isWatching" class="ion-no-padding ion-no-margin">
+              <ion-col size="2" *ngIf="!isWatching" class="ion-no-padding ion-margin-top ion-no-margin">
                 <ion-button (click)="addOrRemoveLink(i, i+1!=form.value?.links.length)" class="height-custom-btn">
                   <ion-icon [name]="i+1==form.value?.links.length ? 'add': 'remove'" color="light"></ion-icon>
                 </ion-button>
