--- a/app/src/app/modules/songs/songs.page.html
+++ b/app/src/app/modules/songs/songs.page.html
@@ -46,7 +46,7 @@
 
   <ion-fab class="ion-fab-custom" slot="fixed" vertical="bottom" horizontal="end">
     <ion-fab-button color="primary" (click)="goToCreateSong()">
-      <ion-icon color="secondary" name="add"></ion-icon>
+      <ion-icon color="light" name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 
