--- a/app/src/app/modules/songs/songs.page.scss
+++ b/app/src/app/modules/songs/songs.page.scss
@@ -9,14 +9,14 @@ ion-content{
         border-radius: 100%;
         background-color: var(--ion-color-primary);
         place-content: center;
-        color: var(--ion-color-secondary);
+        color: var(--ion-color-light);
         font-weight: 900;
         font-size: 1.2rem;
         display: flex;
         align-items: center;
         margin: 0px 8px;
     }
-
+    
     .ion-fab-custom{
         margin-bottom: 36px;
     }
