--- a/app/src/theme/variables.scss
+++ b/app/src/theme/variables.scss
@@ -5,12 +5,12 @@
 
 // /** Ionic CSS Variables **/
 :root {
-	--ion-color-primary: #43B27F;
-	--ion-color-primary-rgb: 67,178,127;
-	--ion-color-primary-contrast: #000000;
-	--ion-color-primary-contrast-rgb: 0,0,0;
-	--ion-color-primary-shade: #3b9d70;
-	--ion-color-primary-tint: #56ba8c;
+	--ion-color-primary: #6030ff;
+	--ion-color-primary-rgb: 96,48,255;
+	--ion-color-primary-contrast: #ffffff;
+	--ion-color-primary-contrast-rgb: 255,255,255;
+	--ion-color-primary-shade: #542ae0;
+	--ion-color-primary-tint: #7045ff;
 
 	--ion-color-secondary: #000000;
 	--ion-color-secondary-rgb: 0,0,0;
@@ -73,12 +73,12 @@
 
 @media (prefers-color-scheme: light) {
   body {
-	--ion-color-primary: #43B27F;
-	--ion-color-primary-rgb: 67,178,127;
-	--ion-color-primary-contrast: #000000;
-	--ion-color-primary-contrast-rgb: 0,0,0;
-	--ion-color-primary-shade: #3b9d70;
-	--ion-color-primary-tint: #56ba8c;
+	--ion-color-primary: #6030ff;
+	--ion-color-primary-rgb: 96,48,255;
+	--ion-color-primary-contrast: #ffffff;
+	--ion-color-primary-contrast-rgb: 255,255,255;
+	--ion-color-primary-shade: #542ae0;
+	--ion-color-primary-tint: #7045ff;
 
 	--ion-color-secondary: #000000;
 	--ion-color-secondary-rgb: 0,0,0;
